--- a/js+html+css/new_html.html
+++ b/js+html+css/new_html.html
@@ -10,7 +10,7 @@
 <p>
 JavaScript 能够对事件作出反应。比如对按钮的点击：
 </p>
-<button type="button" onclick="alert('欢迎!')">点我!</button>
+<button type="button" onclick="alert('欢迎你!')">点我!</button>
 	
 </body>
 </html>
